--- a/.github/workflows/provision_ec2_tag.yml
+++ b/.github/workflows/provision_ec2_tag.yml
@@ -9,7 +9,7 @@ on: [push]
 
 env:
   AWS_ASSUME_ROLE: 'arn:aws:iam::018789649883:role/caos-pipeline-oidc-otel-releases'
-  TAG_OR_UNIQUE_NAME: "gmerkushev-test-2"
+  TAG_OR_UNIQUE_NAME: "some-uniq-string"
 
 permissions:
   id-token: write
@@ -32,6 +32,19 @@ jobs:
         with:
           aws_region: us-east-2
           container_make_target: "terraform/provision-ec2 TF_VAR_inventory_output='/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}/inventory.ec2'  TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
+          ecs_cluster_name: caos_otel_releases
+          task_definition_name: otel-releases-td
+          cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
+          cloud_watch_logs_stream_name: ecs/test-otel-releases
+          aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
+          repo_name: "newrelic/opentelemetry-collector-releases"
+          ref: "terraform_ec2"
+
+      - name: Run packaging tests
+        uses: newrelic/fargate-runner-action@main
+        with:
+          aws_region: us-east-2
+          container_make_target: "test/packaging ANSIBLE_INVENTORY_FOLDER='/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}' LIMIT=testing_hosts_linux"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
