--- a/.github/workflows/ci-prerelease_linux_on_demand.yml
+++ b/.github/workflows/ci-prerelease_linux_on_demand.yml
@@ -9,10 +9,13 @@ on:
       dest_prefix:
         description: 'Repo prefix'
         required: true
+      tag:
+        description: 'tag used for the testing release'
+        required: true
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  TAG: "0.2.0"
+  TAG: ${{ github.event.inputs.tag }}
   DOCKER_HUB_ID: ${{secrets.OHAI_DOCKER_HUB_ID}}
   DOCKER_HUB_PASSWORD: ${{secrets.OHAI_DOCKER_HUB_PASSWORD}}
   # required for GHA publish action, should be moved into optional
@@ -56,7 +59,8 @@ jobs:
           fetch-depth: 0
 
       - name: "Tag this commit" # required for Goreleaser
-        run: git tag nr-otel-collector-${{ env.TAG }}
+        # force tagging to allow to have a testing release with existing tag.
+        run: git tag -f nr-otel-collector-${{ env.TAG }}
 
       - name: Set and validate distribution name and version
         run: .github/workflows/scripts/set_version.sh
