--- a/.github/workflows/component_molecule_packaging.yml
+++ b/.github/workflows/component_molecule_packaging.yml
@@ -30,4 +30,4 @@ jobs:
           repo_base_url: ${{ inputs.REPO_ENDPOINT }}
           package_name: ${{ inputs.PACKAGE_NAME }}
           package_version: ${{ inputs.TAG }}
-          platforms: "al2,al2023,centos7,centos8,debian-bullseye,debian-bookworm,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204,ubuntu2404"
+          platforms: "al2,al2023,centos8,debian-bullseye,debian-bookworm,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204,ubuntu2404"
