--- a/distributions/nr-otel-collector/manifest.yaml
+++ b/distributions/nr-otel-collector/manifest.yaml
@@ -2,7 +2,7 @@ dist:
   module: github.com/newrelic/opentelemetry-collector-releases/nr-otel-collector
   name: nr-otel-collector
   description: New Relic OpenTelemetry Collector
-  version: 0.8.0
+  version: 0.8.1
   output_path: ./_build
   otelcol_version: 0.106.1
 
@@ -15,6 +15,7 @@ exporters:
   - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.106.1
   - gomod: go.opentelemetry.io/collector/exporter/otlphttpexporter v0.106.1
   - gomod: go.opentelemetry.io/collector/exporter/loggingexporter v0.106.1
+  - gomod: go.opentelemetry.io/collector/exporter/prometheusremotewriteexporter v0.106.1
 
 processors:
   - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.106.1
