--- a/.github/workflows/ci_nightly.yaml
+++ b/.github/workflows/ci_nightly.yaml
@@ -39,11 +39,11 @@ jobs:
       - uses: docker/setup-buildx-action@v2
 
       - name: Build binaries & packages with GoReleaser
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: '~> v1'
-          args: --snapshot --clean --skip-sign --timeout 2h
+          version: '~> v2'
+          args: --snapshot --clean --skip=sign --timeout 2h
 
       - name: Extract image version
         run: echo "version=$(jq -r '.version' dist/metadata.json)" >> $GITHUB_ENV
