--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: '~1.22.3'
+          go-version: '1.23'
           check-latest: true
 
       - name: Generate distribution sources
