--- a/.github/workflows/ci_nightly.yaml
+++ b/.github/workflows/ci_nightly.yaml
@@ -13,6 +13,7 @@ on:
 
 env:
   TEST_CLUSTER_NAME: ci-e2etest-nightly
+  REGISTRY: ${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/nr-otel-collector
 
 jobs:
   slow-tests:
@@ -82,7 +83,9 @@ jobs:
 
       - name: Build and publish nightly binaries & packages with GoReleaser
         uses: goreleaser/goreleaser-action@v6
+        env:
+          REGISTRY: ${{ env.REGISTRY }}
         with:
           distribution: goreleaser
           version: '~> v2'
-          args: --skip=validate --clean --timeout 2h --config .goreleaser-nightly.yaml
+          args: --clean --timeout 2h --config .goreleaser-nightly.yaml
