--- a/.goreleaser-nightly.yaml
+++ b/.goreleaser-nightly.yaml
@@ -76,6 +76,7 @@ dockers:
     dockerfile: distributions/nr-otel-collector/Dockerfile
     image_templates:
       - '{{ .Env.REGISTRY }}:{{ .Version }}-nightly-amd64'
+      - '{{ .Env.REGISTRY }}:nightly-amd64'
     extra_files:
       - configs/nr-otel-collector-agent-linux.yaml
     build_flag_templates:
@@ -92,6 +93,7 @@ dockers:
     dockerfile: distributions/nr-otel-collector/Dockerfile
     image_templates:
       - '{{ .Env.REGISTRY }}:{{ .Version }}-nightly-arm64'
+      - '{{ .Env.REGISTRY }}:nightly-arm64'
     extra_files:
       - configs/nr-otel-collector-agent-linux.yaml
     build_flag_templates:
@@ -109,6 +111,10 @@ docker_manifests:
     image_templates:
       - '{{ .Env.REGISTRY }}:{{ .Version }}-nightly-amd64'
       - '{{ .Env.REGISTRY }}:{{ .Version }}-nightly-arm64'
+  - name_template: '{{ .Env.REGISTRY }}:nightly'
+    image_templates:
+      - '{{ .Env.REGISTRY }}:nightly-amd64'
+      - '{{ .Env.REGISTRY }}:nightly-arm64'
 
 # Skip creating/updating gh release.
 release:
