--- a/.github/workflows/ci_nightly.yaml
+++ b/.github/workflows/ci_nightly.yaml
@@ -86,4 +86,4 @@ jobs:
         with:
           distribution: goreleaser
           version: '~> v2'
-          args: --clean --timeout 2h --config .goreleaser-nightly.yaml
+          args: --skip=announce,validate --clean --timeout 2h --config .goreleaser-nightly.yaml
