--- a/.goreleaser-nightly.yaml
+++ b/.goreleaser-nightly.yaml
@@ -130,3 +130,9 @@ changelog:
 
 snapshot:
   version_template: "{{ incpatch .Version }}-SNAPSHOT-{{.ShortCommit}}-nightly"
+
+blobs:
+  - provider: s3
+    region: us-east-1
+    bucket: nr-releases
+    directory: 'opentelemetry-collector-releases/{{ .Tag }}'
